# LAsOsuBeatmapParser

./: .editorconfig  .gitignore  API.md  LAsOsuBeatmapParser.sln  README.md  publish-nuget.ps1
LAsRustSRCalculator/: Cargo.toml  README.md  build-Rust-SR-DLL.ps1  test_output.txt  test_output2.txt
LAsRustSRCalculator/src/: cross_matrix.rs  lib.rs  math.rs  note.rs  parser.rs  sr.rs
docs/: API.md  BeatmapExtensionsAPI.md  CodeStyleExamples.cs  CustomGameModeExample.md  SRCalculationAPI.md
src/: LAsOsuBeatmapParser.csproj
src/Analysis/: CrossMatrixProvider.cs  SRCalculator.cs  SRCalculatorPython.cs  SRCalculatorRust.cs  SRCoreFunctions.cs  SRErrorCodes.cs  SRsNote.cs
src/Beatmaps/: Beatmap.cs  BeatmapConverter.cs  BeatmapDifficulty.cs  BeatmapInfo.cs  BeatmapInfoExtensions.cs  BeatmapInvalidForRulesetException.cs  BeatmapMetadata.cs  BeatmapMetadataInfoExtensions.cs  BeatmapStatistic.cs  BreakPeriod.cs  ControlPointInfo.cs  ControlPoints.cs  Enums.cs  Event.cs  HitObject.cs  IBeatmap.cs  IBeatmapConverter.cs  IBeatmapDifficultyInfo.cs  IBeatmapInfo.cs  IBeatmapMetadataInfo.cs  IBeatmapProcessor.cs  IBeatmapSetInfo.cs  IRulesetInfo.cs  IUser.cs  IWorkingBeatmap.cs  Mod.cs  (+5 more)
tests/: BeatmapDecoderTests.cs  BeatmapEncoderTests.cs  ComparisonAllVersionTests.cs  ComparisonTests.cs  LAsOsuBeatmapParser.Tests.csproj  MainCsSRTests.cs  ProductionCSRTests.cs  RustSRCalculatorTests.cs  SRCalculatorBenchmarks.cs  SRCalculatorComparisonTests.cs  SRCalculatorPerformanceTests.cs  SRCalculatorTests.cs  TestResourceLoader.cs  VS_SR_Tests.cs  VersionCSRTests.cs  xunit.runner.json
(+49 files in other folders)
