[package]
name = "rust_sr_calculator"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_sr_calculator"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ordered-float = "5.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
